fix: nav background styles in dark mode

--- a/src/theme-default/components/Nav/index.module.scss
+++ b/src/theme-default/components/Nav/index.module.scss
@@ -13,10 +13,6 @@
     backdrop-filter: saturate(50%) blur(8px);
   }
 
-  :global(.dark) .nav {
-    background: rgba(36, 36, 36, 0.7);
-  }
-
   @supports not (backdrop-filter: saturate(50%) blur(8px)) {
     .nav {
       background: rgba(255, 255, 255, 0.95);
